fixed a problem in the original code and then certer and aligned the text accordingly

--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -10,19 +10,16 @@
 .body {
     background: hsl(212, 45%, 89%);
     display: flex;
-    text-align: center;
-    width: 320px;
-    width: 499px;
-
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
 .image {
-    display: flex;
     height: 288px;
     width: 288px;
     border-radius: 10px;
-
-
 }
 
 .info {
@@ -32,8 +29,11 @@
 }
 
 .main {
+    display: flex;
+    flex-direction: column;
     background: white;
-    align-items: center;
     padding: 16px 16px 40px 16px;
     border-radius: 10px;
+    text-align: center;
+
 }
